<resources>
    <string name="app_name">Onnline consultancy</string>
    <string name="login_password_hint">passward\n</string>
    <string name="Loginbutton" translatable="false">login</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="mobileNoWarnig" translatable="false">Mobile NO</string>
    <string name="login_confirmpassword_hint" translatable="false">confirm passward</string>
    <string name="Register" translatable="false">Register</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="use_other_methods" translatable="false">Use other Methods</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="faisal_nabi">faisal nabi</string>
    <string name="user_example_com">user@example.com</string>
    <string name="visa_type">Visa Type</string>
    <string name="consultant_name">Consultant Name</string>
    <string name="location" translatable="false">Location</string>
    <string name="service">Service</string>
    <string name="_03169832383">03169832383</string>
    <string name="country_name">Country Name</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="reset">RESET</string>

</resources>