<!-- res/layout/item_consultant.xml -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/consultantProfileImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/profilepic"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/consultantNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultant_name"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/consultantLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/consultantServiceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
        <TextView
            android:id="@+id/consultantno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_03169832383"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
